Updated project architecture components

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
+    <string name="moviesNotFound">No Movies yet...\nGo add a movie</string>
+    <string name="movieError">Error : Couldn\'t add a movie...</string>
+
     <string name="MovieList">Movie Catalogue</string>
     <string name="AddMovie">Add Movie</string>
 
