Added firebase realtime database support for rating model

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,8 @@
     <string name="rating_view">Rating: </string>
     <string name="rating_details">Rating Details</string>
 
+    <string name="messageLoading">Loading...</string>
+
     <!-- Maps -->
     <string name="maps_api_key"></string>
 
