--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,8 @@
     <string name="rating_details">Rating Details</string>
 
     <string name="messageLoading">Loading...</string>
+    <string name="select_profile_image">Select Profile Image</string>
+
 
     <!-- Maps -->
     <string name="maps_api_key"></string>
